<resources>
    <string name="app_name">Vaulty</string>
    <string name="passwords">Passwords</string>
    <string name="settings">Settings</string>
    <string name="new_password">New password</string>
    <string name="search">search</string>
    <string name="title">title</string>
    <string name="notes">notes</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="add_password">add password</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="clear_all_passwords">Clear all passwords</string>
    <string name="_import">Import</string>
    <string name="export">Export</string>
    <string name="generate_password">Generate password</string>
    <string name="use_custom_master_password">Use custom master password</string>
    <string name="master_password">Master Password</string>
    <string name="enter">enter</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Russian</item>
    </string-array>
</resources>