<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/nav_bar_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainer">

        <ImageButton
            android:id="@+id/passwordsBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/nav_bar_gray"
            android:contentDescription="@string/passwords"
            android:radius="64dp"
            android:scaleType="centerInside"
            android:src="@drawable/lock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addPasswordBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/addPasswordBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/nav_bar_gray"
            android:contentDescription="@string/new_password"
            android:scaleType="centerInside"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settingsBtn"
            app:layout_constraintStart_toEndOf="@id/passwordsBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/settingsBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/nav_bar_gray"
            android:contentDescription="@string/settings"
            android:scaleType="centerInside"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addPasswordBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>