<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewPasswordFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/newPasswordForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginHorizontal="10dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/new_password_form_bg">

            <androidx.cardview.widget.CardView
                android:id="@+id/newPasswordFormTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/newPasswordFormPassword"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/newPasswordFormTitleEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/newPasswordFormPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/newPasswordFormEmail"
                app:layout_constraintTop_toBottomOf="@id/newPasswordFormTitle">

                <EditText
                    android:id="@+id/newPasswordFormPasswordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/newPasswordFormEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/newPasswordFormNotes"
                app:layout_constraintTop_toBottomOf="@id/newPasswordFormPassword">

                <EditText
                    android:id="@+id/newPasswordFormEmailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/newPasswordFormNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newPasswordFormEmail">

                <EditText
                    android:id="@+id/newPasswordFormNotesEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/notes"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newPasswordAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/new_password_form_bg"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/add_password"
        android:textColor="@color/text_hint"
        android:textSize="29sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/generateBtn"
        app:rippleColor="@color/button_ripple" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/generateBtn"
        android:contentDescription="@string/generate_password"
        app:icon="@drawable/random"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:layout_margin="15dp"
        app:iconSize="40dp"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        android:layout_marginHorizontal="5dp"
        app:iconTint="@color/white"
        android:backgroundTint="@color/generate_pwd_btn_bg"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@id/newPasswordAddButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>