<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PasswordInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/passwordInfoForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginHorizontal="10dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/new_password_form_bg">

            <androidx.cardview.widget.CardView
                android:id="@+id/passwordInfoFormTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/passwordInfoFormPassword"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/passwordInfoFormTitleEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/passwordInfoFormPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/passwordInfoFormEmail"
                app:layout_constraintTop_toBottomOf="@id/passwordInfoFormTitle">

                <EditText
                    android:id="@+id/passwordInfoFormPasswordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/passwordInfoFormEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/passwordInfoFormNotes"
                app:layout_constraintTop_toBottomOf="@id/passwordInfoFormPassword">

                <EditText
                    android:id="@+id/passwordInfoFormEmailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/passwordInfoFormNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginHorizontal="10dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/new_password_form_field_bg"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordInfoFormEmail">

                <EditText
                    android:id="@+id/passwordInfoFormNotesEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/notes"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="15dp"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/confirm_password_button_bg"
        android:contentDescription="@string/save"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        app:cornerRadius="8dp"
        app:icon="@drawable/check"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="48dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/confirm_button_ripple" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="15dp"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/delete_password_button_bg"
        android:contentDescription="@string/delete"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        app:cornerRadius="8dp"
        app:icon="@drawable/bin"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="32dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>